@@ -1,5 +1,11 @@
 2006-12-22  Matthew Allum  <mallum@openedhand.com>
 
+	* psplash-fb.c:
+	* psplash.c:
+	More rotation tweaks
+
+2006-12-22  Matthew Allum  <mallum@openedhand.com>
+
 	* psplash.c:
 	Whoops, actually set the angle config option
 
